--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,14 @@ body {
 /* video */
 .video, .matrix {
   position: absolute;
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
 .videos {
-  width: 25%;
-  height: 200px;
-  float: left;
-  overflow: hidden;
+    width: 25%;
+    height: 200px;
+    float: left;
+    overflow: hidden;
 }
 .video {
   background-repeat: no-repeat;
@@ -22,27 +22,43 @@ body {
 }
 .video img {
   min-width: 100%;
-  height: 100%;
+    height: 100%;
 }
 img.video {
   min-width: 100%;
-  height: 100%;
+    height: 100%;
 }
 .desc {
   position: absolute;
   bottom: 20px;
   left: 20px;
+  color: #fff;  
+}
+.colophon {
+  position: absolute;
+  top: 16px;
+  left: 20px;
+  color: #fff;  
+}
+.colophon p {
+  margin: 0;
+  font-size: 11px;
+    background: #000;
+    padding: 0.5em;
+}
+.colophon p a:link, .colophon p a:visited {
   color: #fff;
 }
 .desc h2, .desc h5 {
   margin: 0.5em 0;
-  background: #000;
-  padding: 0.5em;
+    background: #000;
+    padding: 0.5em;
 }
 .desc h2 {
   text-transform: uppercase;
-  letter-spacing: 3px;
+    letter-spacing: 3px;
 }
 .desc h5 {
   display: inline;
 }
+
